--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.1",
+    "@nestjs/config": "^1.0.0",
     "@nestjs/core": "^8.0.1",
     "@nestjs/mapped-types": "^1.0.0",
     "@nestjs/platform-express": "^8.0.1",
     "@nestjs/typeorm": "^8.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "joi": "^17.4.1",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -40,6 +42,7 @@
     "@nestjs/testing": "^8.0.3",
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
+    "@types/joi": "^17.2.3",
     "@types/node": "^16.3.1",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
