--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,14 @@ services:
     ports:
       - '5432:5432'
 
+  test-db:
+    image: postgres
+    restart: always
+    ports:
+      - '5433:5432'
+    environment:
+      POSTGRES_PASSWORD: pass123
+
   adminer:
     image: adminer
     restart: always
