--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:watch": "node_modules/.bin/jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:e2e:teardown": "docker-compose stop test-db && docker-compose rm -f test-db"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.1",
@@ -52,6 +53,7 @@
     "eslint": "^7.30.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "jasmine": "^3.8.0",
     "jest": "^27.0.6",
     "prettier": "^2.3.2",
     "supertest": "^6.1.3",
